@@ -52,6 +52,8 @@ public class AddressServiceImpl implements AddressService {
                 .ward(request.getWard())
                 .wardCode(request.getWardCode())
                 .city(request.getCity())
+                .provinceId(request.getProvinceId())
+                .districtName(request.getDistrictName())
                 .districtId(request.getDistrictId())
                 .countryCode(request.getCountryCode() != null ? request.getCountryCode() : "VN")
                 .isDefault(request.isDefault())
@@ -77,7 +79,7 @@ public class AddressServiceImpl implements AddressService {
         List<AddressEntity> addresses = addressRepository.findByUserIdOrderByCreatedAtDesc(user.getId());
         List<AddressResponse> responses = addresses.stream()
                 .map(AddressResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("Inside AddressServiceImpl.getUserAddresses success userEmail={}, count={}", userEmail, responses.size());
         return responses;
@@ -125,6 +127,12 @@ public class AddressServiceImpl implements AddressService {
         }
         if (request.getCity() != null) {
             address.setCity(request.getCity());
+        }
+        if (request.getProvinceId() != null) {
+            address.setProvinceId(request.getProvinceId());
+        }
+        if (request.getDistrictName() != null) {
+            address.setDistrictName(request.getDistrictName());
         }
         if (request.getDistrictId() != null) {
             address.setDistrictId(request.getDistrictId());
